--- a/Proyecto_de_Analisis_de_Datos_01-2023.ipynb
+++ b/Proyecto_de_Analisis_de_Datos_01-2023.ipynb
@@ -5,7 +5,9 @@
    "id": "296bb76f",
    "metadata": {},
    "source": [
-    "# Importamos nuestro Excel de las muertes ocurridas en 2008\n"
+    "# Importamos nuestro Excel de las muertes ocurridas en 2008\n",
+    "\n",
+    "# Cargar Datos\n"
    ]
   },
   {
@@ -449,7 +451,8 @@
    "id": "2dd2fc1c",
    "metadata": {},
    "source": [
-    "## Agregar encabezados \n",
+    "# Limpienza de Datos \n",
+    "### Agregar encabezados \n",
     "si nuestro dateset no tiene encabezados, desde python podemos agregarle las etiquetas, pero primero debemos eliminar filas inesecarias."
    ]
   },
@@ -3732,6 +3735,7 @@
    "id": "863cff26",
    "metadata": {},
    "source": [
+    "\n",
     "<h2 id=\"identify_handle_missing_values\">Identificar y manejar valores perdidos</h2>\n",
     "\n",
     "<h3 id=\"identify_missing_values\">Identificar valores perdidos</h3>\n",
@@ -4252,6 +4256,7 @@
    "id": "e98d82f1",
    "metadata": {},
    "source": [
+    "# Datos Estadisticos  \n",
     "<h4>Cuenta los valores que faltan en cada columna</h4>\n",
     "<p>\n",
     "Usando un bucle for en Python, podemos calcular rápidamente la cantidad de valores que faltan en cada columna. Como se mencionó anteriormente, \"Verdadero\" representa un valor faltante y \"Falso\" significa que el valor está presente en el conjunto de datos. En el cuerpo del bucle for, el método \".value_counts()\" cuenta el número de valores \"Verdaderos\".\n",
@@ -4360,7 +4365,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "d5d060ac",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
